--- a/LearningWebApp220901/Views/Home/Nepali.cshtml
+++ b/LearningWebApp220901/Views/Home/Nepali.cshtml
@@ -12,11 +12,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+        <style>
+            table,
+            th,
+            
+            table {
+                align-content:center;
+                gap:20px 20px;
+                border-spacing: 20px;
+               
+            }
+            body{
+                background-color:GrayText;
+            }
+            
+        </style>
+    
 </head>
 
 
 <body>
-
 
     <p>
         <br />
@@ -24,90 +40,188 @@
     <center>
         <font face="Roboto" size="20" color="Red">Nepali</font><br />
     </center>
+    <p>
+        <br />
+    </p>
+    <table style="width:100%">
 
-    <table>
         <tr>
-            <content>Hello</content>
-            <td>Aasish</td>
-            <td>Aasish</td>
-            <td>Aasish</td>
-            <td>Aasish</td>
         </tr>
         <tr>
-            <td>Aasish</td>
-            <td>Aasish</td>
-            <td>Aasish</td>
-            <td>Aasish</td>
+            <th align="right">Nepali Consonants</th>
+            <th>Nepali Vowels</th>
+            <th>Nepali Numbers</th>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
 
+        <tr>
+            <td>
+                <input type="button" value=" क " Name="btn_N1" onclick="msg()" style="width:40px" " />
+                <input type="button" value=" ख " Name="btn_N2" style="width:40px" "                           />
+                <input type="button" value=" ग " Name="btn_N3" style="width:40px" "                           />
+                <input type="button" value=" घ " Name="btn_N4" style="width:40px" "                           />
+                <input type="button" value=" ङ " Name="btn_N5" style="width:40px" "                           />
+            </td>
+            <td>
+                <input type="button" value=" अ " Name="btn_N101" style="width:40px" "                                 />
+                <input type="button" value=" आ " Name="btn_N102" style="width:40px" "                                 />
+                <input type="button" value=" इ " Name="btn_N103" style="width:40px" "                                />
+                <input type="button" value=" ई " Name="btn_N104" style="width:40px" "                               />
+                <input type="button" value=" उ " Name="btn_N105" style="width:40px" "                              />
+            </td>
+            <td>
+                <input type="button" value=" १ " Name="btn_N202" style="width:40px" "                                  />
+                <input type="button" value=" २ " Name="btn_N203" style="width:40px" "                                 />
+                <input type="button" value=" ३ " Name="btn_N204" style="width:40px" "                                />
+                <input type="button" value=" ४ " Name="btn_N205" style="width:40px" "                               />
+                <input type="button" value=" ५ " Name="btn_N206" style="width:40px" "                                     />
+
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <br />
+            </td>
         </tr>
 
 
+        <tr>
+            <td>
+                <input type="button" value=" च " Name="btn_N6" style="width:40px" "" />
+                <input type="button" value=" छ " Name="btn_N7" style="width:40px" "                           />
+                <input type="button" value=" ज " Name="btn_N8" style="width:40px" "                           />
+                <input type="button" value=" झ " Name="btn_N9" style="width:40px" "                           />
+                <input type="button" value=" ञ " Name="btn_N10" style="width:40px" "                           />
+            </td>
+            <td>
+                <input type="button" value=" ऊ " Name="btn_N106" style="width:40px" "                                  />
+                <input type="button" value=" ॠ " Name="btn_N107" style="width:40px" "                                  />
+                <input type="button" value=" ए " Name="btn_N108" style="width:40px" "                                 />
+                <input type="button" value=" ऐ " Name="btn_N109" style="width:40px" "                                />
+                <input type="button" value=" ओ " Name="btn_N110" style="width:40px" "                               />
+            </td>
+            <td>
+                <input type="button" value=" ६ " Name="btn_N207" style="width:40px" "                                   />
+                <input type="button" value=" ७ " Name="btn_N208" style="width:40px" "                                  />
+                <input type="button" value=" ८ " Name="btn_N209" style="width:40px" "                                 />
+                <input type="button" value=" ९ " Name="btn_N210" style="width:40px" "                                />
+                <input type="button" value=" ० " Name="btn_N201" style="width:40px" "                                   />
+
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" ट " Name="btn_N11" style="width:40px" "" />
+                <input type="button" value=" ठ " Name="btn_N12" style="width:40px" "                          />
+                <input type="button" value=" ड " Name="btn_N13" style="width:40px" "                          />
+                <input type="button" value=" ढ " Name="btn_N14" style="width:40px" "                          />
+                <input type="button" value=" ण " Name="btn_N15" style="width:40px" "                          />
+            </td>
+            <td>
+                <input type="button" value=" औ " Name="btn_N111" style="width:40px" "                                   />
+                <input type="button" value=" अं " Name="btn_N112" style="width:40px" "                                   />
+                <input type="button" value=" अ: " Name="btn_N113" style="width:40px" "                                  />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+
+        <tr>
+            <td>
+                <input type="button" value=" त " Name="btn_N16" style="width:40px" "                         />
+                <input type="button" value=" थ " Name="btn_N17" style="width:40px" "                         />
+                <input type="button" value=" द " Name="btn_N18" style="width:40px" "                         />
+                <input type="button" value=" ध " Name="btn_N19" style="width:40px" "                         />
+                <input type="button" value=" न " Name="btn_N20" style="width:40px" "                         />
+
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" प " Name="btn_N21" style="width:40px" "                         />
+                <input type="button" value=" फ " Name="btn_N22" style="width:40px" "                         />
+                <input type="button" value=" ब " Name="btn_N23" style="width:40px" "                         />
+                <input type="button" value=" भ " Name="btn_N24" style="width:40px" "                         />
+                <input type="button" value=" म " Name="btn_N25" style="width:40px" "                         />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" य " Name="btn_N26" style="width:40px" "                         />
+                <input type="button" value=" र " Name="btn_N27" style="width:40px" "                         />
+                <input type="button" value=" ल " Name="btn_N28" style="width:40px" "                         />
+                <input type="button" value=" व " Name="btn_N29" style="width:40px" "                         />
+                <input type="button" value=" श " Name="btn_N30" style="width:40px" "                         />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" ष " Name="btn_N31" style="width:40px" "                         />
+                <input type="button" value=" स " Name="btn_N32" style="width:40px" "                         />
+                <input type="button" value=" ह " Name="btn_N33" style="width:40px" "                         />
+                <input type="button" value=" क्ष " Name="btn_N34" style="width:40px" "                         />
+                <input type="button" value=" त्र " Name="btn_N35" style="width:40px" "                         />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" ज्ञ " Name="btn_N36" style="width:40px" "                            />
+            </td>
+        </tr>
     </table>
+    <tr>
+        <td>
+            <br />
+        </td>
+    </tr>
+    
+    <script>
+        function msg() {
+                      alert("क= ka");
+        }
+    </script>
 
-    <p>
-        <input type="button" value=" क " Name="btn_N1" style="width:40px" "      />
-        <input type="button" value=" ख " Name="btn_N2" style="width:40px" "      />
-        <input type="button" value=" ग " Name="btn_N3" style="width:40px" "      />
-        <input type="button" value=" घ " Name="btn_N4" style="width:40px" "      />
-        <input type="button" value=" ङ " Name="btn_N5" style="width:40px" "      />
-    </p>
-
-
-    <p>
-        <input type="button" value=" च " Name="btn_N6" style="width:40px" "" />
-        <input type="button" value=" छ " Name="btn_N7" style="width:40px" "      />
-        <input type="button" value=" ज " Name="btn_N8" style="width:40px" "      />
-        <input type="button" value=" झ " Name="btn_N9" style="width:40px" "      />
-        <input type="button" value=" ञ " Name="btn_N10" style="width:40px" "      />
-    </p>
-
-    <p>
-        <input type="button" value=" ट " Name="btn_N11" style="width:40px" "" />
-        <input type="button" value=" ठ " Name="btn_N12" style="width:40px" "      />
-        <input type="button" value=" ड " Name="btn_N13" style="width:40px" "      />
-        <input type="button" value=" ढ " Name="btn_N14" style="width:40px" "      />
-        <input type="button" value=" ण " Name="btn_N15" style="width:40px" "      />
-    </p>
-
-
-    <p>
-        <input type="button" value=" त " Name="btn_N16" style="width:40px" "      />
-        <input type="button" value=" थ " Name="btn_N17" style="width:40px" "      />
-        <input type="button" value=" द " Name="btn_N18" style="width:40px" "      />
-        <input type="button" value=" ध " Name="btn_N19" style="width:40px" "      />
-        <input type="button" value=" न " Name="btn_N20" style="width:40px" "      />
-    </p>
-
-    <p>
-        <input type="button" value=" प " Name="btn_N16" style="width:40px" "      />
-        <input type="button" value=" फ " Name="btn_N17" style="width:40px" "      />
-        <input type="button" value=" ब " Name="btn_N18" style="width:40px" "      />
-        <input type="button" value=" भ " Name="btn_N19" style="width:40px" "      />
-        <input type="button" value=" म " Name="btn_N20" style="width:40px" "      />
-    </p>
-
-    <p>
-        <input type="button" value=" य " Name="btn_N16" style="width:40px" "      />
-        <input type="button" value=" र " Name="btn_N17" style="width:40px" "      />
-        <input type="button" value=" ल " Name="btn_N18" style="width:40px" "      />
-        <input type="button" value=" व " Name="btn_N19" style="width:40px" "      />
-        <input type="button" value=" श " Name="btn_N20" style="width:40px" "      />
-    </p>
-
-
-    <p>
-        <input type="button" value=" ष " Name="btn_N16" style="width:40px" "      />
-        <input type="button" value=" स " Name="btn_N17" style="width:40px" "      />
-        <input type="button" value=" ह " Name="btn_N18" style="width:40px" "      />
-        <input type="button" value=" क्ष " Name="btn_N19" style="width:40px" "      />
-        <input type="button" value=" त्र " Name="btn_N20" style="width:40px" "      />
-    </p>
-
-    <p>
-        <center>
-            <input type="button" value=" ज्ञ " Name="btn_N16" style="width:40px" "       />
-        </center>
-    </p>
 
 </body>
 
