--- a/LearningWebApp220901/Views/Home/English.cshtml
+++ b/LearningWebApp220901/Views/Home/English.cshtml
@@ -3,5 +3,227 @@
     ViewBag.Title = "English";
 }
 
-<h2>English</h2>
 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <style>
+        table,
+        th,
+        table {
+            align-content: center;
+            gap: 20px 20px;
+            border-spacing: 20px;
+        }
+
+        
+    </style>
+
+</head>
+
+
+<body>
+    
+    <p>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+    </p>
+    <center>
+        <font face="Roboto" size="20" color="Red">English</font><br />
+    </center>
+    <p>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+    </p>
+    <table style="width:100%">
+
+        <tr>
+        </tr>
+        <tr>
+            <th align="right">Capital Letters</th>
+            <th>Small Letters</th>
+            <th>Numbers</th>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" A " Name="btn_N1" onclick="msg()" style="width:40px" "  />
+                <input type="button" value=" B " Name="btn_N2" style="width:40px" "                            />
+                <input type="button" value=" C " Name="btn_N3" style="width:40px" "                            />
+                <input type="button" value=" D " Name="btn_N4" style="width:40px" "                            />
+                <input type="button" value=" E " Name="btn_N5" style="width:40px" "                            />
+            </td>
+            <td>
+                <input type="button" value=" a " Name="btn_N101" style="width:40px" "                                  />
+                <input type="button" value=" b " Name="btn_N102" style="width:40px" "                                  />
+                <input type="button" value=" c " Name="btn_N103" style="width:40px" "                                 />
+                <input type="button" value=" d " Name="btn_N104" style="width:40px" "                                />
+                <input type="button" value=" e " Name="btn_N105" style="width:40px" "                               />
+            </td>
+            <td>
+                <input type="button" value=" 1 " Name="btn_N202" style="width:40px" "                                   />
+                <input type="button" value=" 2 " Name="btn_N203" style="width:40px" "                                  />
+                <input type="button" value=" 3 " Name="btn_N204" style="width:40px" "                                 />
+                <input type="button" value=" 4 " Name="btn_N205" style="width:40px" "                                />
+                <input type="button" value=" 5 " Name="btn_N206" style="width:40px" "                                      />
+
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+
+        <tr>
+            <td>
+                <input type="button" value=" F " Name="btn_N6" style="width:40px" "" />
+                <input type="button" value=" G " Name="btn_N7" style="width:40px" "                            />
+                <input type="button" value=" H " Name="btn_N8" style="width:40px" "                            />
+                <input type="button" value=" I " Name="btn_N9" style="width:40px" "                            />
+                <input type="button" value=" J " Name="btn_N10" style="width:40px" "                            />
+            </td>
+            <td>
+                <input type="button" value=" f " Name="btn_N106" style="width:40px" "                                   />
+                <input type="button" value=" g " Name="btn_N107" style="width:40px" "                                   />
+                <input type="button" value=" h " Name="btn_N108" style="width:40px" "                                  />
+                <input type="button" value=" i " Name="btn_N109" style="width:40px" "                                 />
+                <input type="button" value=" j " Name="btn_N110" style="width:40px" "                                />
+            </td>
+            <td>
+                <input type="button" value=" 6 " Name="btn_N207" style="width:40px" "                                    />
+                <input type="button" value=" 7 " Name="btn_N208" style="width:40px" "                                   />
+                <input type="button" value=" 8 " Name="btn_N209" style="width:40px" "                                  />
+                <input type="button" value=" 9 " Name="btn_N210" style="width:40px" "                                 />
+                <input type="button" value=" 0 " Name="btn_N201" style="width:40px" "                                    />
+
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" K " Name="btn_N11" style="width:40px" "" />
+                <input type="button" value=" L " Name="btn_N12" style="width:40px" "                           />
+                <input type="button" value=" M " Name="btn_N13" style="width:40px" "                           />
+                <input type="button" value=" N " Name="btn_N14" style="width:40px" "                           />
+                <input type="button" value=" O " Name="btn_N15" style="width:40px" "                           />
+            </td>
+            <td>
+                <input type="button" value=" k " Name="btn_N111" style="width:40px" "                                      />
+                <input type="button" value=" l " Name="btn_N112" style="width:40px" "                                      />
+                <input type="button" value=" m " Name="btn_N113" style="width:40px" "                                     />
+                <input type="button" value=" n " Name="btn_N114" style="width:40px" "                                     />
+                <input type="button" value=" o " Name="btn_N115" style="width:40px" "                                    />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+
+        <tr>
+            <td>
+                <input type="button" value=" P " Name="btn_N16" style="width:40px" "                           />
+                <input type="button" value=" Q " Name="btn_N17" style="width:40px" "                           />
+                <input type="button" value=" R " Name="btn_N18" style="width:40px" "                           />
+                <input type="button" value=" S " Name="btn_N19" style="width:40px" "                           />
+                <input type="button" value=" T " Name="btn_N20" style="width:40px" "                           />
+
+            </td>
+            <td>
+                <input type="button" value=" p " Name="btn_N116" style="width:40px" "                                       />
+                <input type="button" value=" q " Name="btn_N117" style="width:40px" "                                       />
+                <input type="button" value=" r " Name="btn_N118" style="width:40px" "                                      />
+                <input type="button" value=" s " Name="btn_N119" style="width:40px" "                                      />
+                <input type="button" value=" t " Name="btn_N120" style="width:40px" "                                     />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" U " Name="btn_N21" style="width:40px" "                           />
+                <input type="button" value=" V " Name="btn_N22" style="width:40px" "                           />
+                <input type="button" value=" W " Name="btn_N23" style="width:40px" "                           />
+                <input type="button" value=" X " Name="btn_N24" style="width:40px" "                           />
+                <input type="button" value=" Y " Name="btn_N25" style="width:40px" "                           />
+            </td>
+            <td>
+                <input type="button" value=" u " Name="btn_N211" style="width:40px" "                           />
+                <input type="button" value=" v " Name="btn_N212" style="width:40px" "                           />
+                <input type="button" value=" w " Name="btn_N213" style="width:40px" "                           />
+                <input type="button" value=" x " Name="btn_N214" style="width:40px" "                           />
+                <input type="button" value=" y " Name="btn_N215" style="width:40px" "                           />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="button" value=" Z " Name="btn_N26" style="width:40px" "                              />
+            </td>
+            <td>
+                <input type="button" value=" z " Name="btn_N216" style="width:40px" "                              />
+            </td>
+        </tr>
+    </table>
+    <tr>
+        <td>
+            <br />
+        </td>
+    </tr>
+
+        
+        <br />
+        <br />
+        <br />
+        <br />
+        
+    
+
+    <script>
+        function msg() {
+                      alert("क= ka");
+        }
+    </script>
+
+
+</body>
+
+</html>
