--- a/LearningWebApp220901/Views/Shared/_Layout.cshtml
+++ b/LearningWebApp220901/Views/Shared/_Layout.cshtml
@@ -6,9 +6,20 @@
     <title>@ViewBag.Title Learning App</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+<style>
+    body {
+    background-image: url('https://localhost:44395/Kids2.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    }
+    </style>
+
 
 </head>
+
 <body>
+   
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
