Made changes on some logic issues. Added new files/pictures.

--- a/LearningWebApp220901/Views/Home/Index.cshtml
+++ b/LearningWebApp220901/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 <div class="jumbotron">
     <h1>Learning App</h1>
     <p class="lead">Learning App is a free web App for learning Nepali and English. It includes interactive learning process for kids.</p>
-    <p><a href="https://localhost:44395/Account/Login" class="btn btn-primary btn-lg">Sign In &raquo;</a></p>
+    <p><a href="../Account/Login" class="btn btn-primary btn-lg">Sign In &raquo;</a></p>
 </div>
 <br />
 <br />
